force-app/main/default/objects/Lead/fields/Ad_Lead_Id__c.field-meta.xml
<CustomField>
    <fullName>Ad_Lead_Id__c</fullName>
    <externalId>true</externalId>
    <label>Ad Lead ID</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>