force-app/main/default/objects/Lead/fields/Disposition__c.field-meta.xml
<CustomField>
    <fullName>Disposition__c</fullName>
    <label>Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interested</fullName>
            </value>
            <value>
                <fullName>Family call needed</fullName>
            </value>
            <value>
                <fullName>Callback</fullName>
            </value>
            <value>
                <fullName>Nurture</fullName>
            </value>
            <value>
                <fullName>Not a fit</fullName>
            </value>
            <value>
                <fullName>Price objection</fullName>
            </value>
            <value>
                <fullName>Doctor review</fullName>
            </value>
            <value>
                <fullName>DND</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>