force-app/main/default/objects/Lead/fields/Enquiring_For__c.field-meta.xml
<CustomField>
    <fullName>Enquiring_For__c</fullName>
    <label>Enquiring For</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Myself</fullName>
            </value>
            <value>
                <fullName>Parent</fullName>
            </value>
            <value>
                <fullName>Spouse</fullName>
            </value>
            <value>
                <fullName>Other family</fullName>
            </value>
        </valueSetDefinition>
        <restricted>true</restricted>
    </valueSet>
    <required>true</required>
</CustomField>