force-app/main/default/objects/Lead/fields/First_Call_At__c.field-meta.xml
<CustomField>
    <fullName>First_Call_At__c</fullName>
    <label>First Call At</label>
    <type>DateTime</type>
</CustomField>