force-app/main/default/objects/Lead/fields/First_Response_At__c.field-meta.xml
<CustomField>
    <fullName>First_Response_At__c</fullName>
    <label>First Response</label>
    <type>DateTime</type>
</CustomField>