force-app/main/default/objects/Lead/fields/Fit_Score__c.field-meta.xml
<CustomField>
    <fullName>Fit_Score__c</fullName>
    <label>Fit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>