force-app/main/default/objects/Lead/fields/Normalized_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Normalized_Mobile__c</fullName>
    <externalId>true</externalId>
    <label>Normalized Mobile</label>
    <length>15</length>
    <type>Text</type>
</CustomField>