force-app/main/default/objects/Lead/fields/Patient_DOB__c.field-meta.xml
<CustomField>
    <fullName>Patient_DOB__c</fullName>
    <label>DOB</label>
    <type>Date</type>
</CustomField>