force-app/main/default/objects/Lead/fields/Patient_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Patient_Mobile__c</fullName>
    <label>Mobile</label>
    <type>Phone</type>
</CustomField>