force-app/main/default/objects/Lead/fields/Program_Interest__c.field-meta.xml
<CustomField>
    <fullName>Program_Interest__c</fullName>
    <label>Program Interest</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Type 2 remission</fullName>
            </value>
            <value>
                <fullName>Diabetes management (insulin)</fullName>
            </value>
            <value>
                <fullName>Prediabetes</fullName>
            </value>
            <value>
                <fullName>Not sure</fullName>
            </value>
        </valueSetDefinition>
        <restricted>true</restricted>
    </valueSet>
</CustomField>