force-app/main/default/objects/Lead/fields/Referring_Doctor__c.field-meta.xml
<CustomField>
    <fullName>Referring_Doctor__c</fullName>
    <label>Doctor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Doctor Records</relationshipLabel>
    <relationshipName>Referring_Doctor</relationshipName>
    <type>Lookup</type>
</CustomField>