force-app/main/default/objects/Lead/fields/Referring_Partner__c.field-meta.xml
<CustomField>
    <fullName>Referring_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referring Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Referring Partner Records</relationshipLabel>
    <relationshipName>Referring_Partner</relationshipName>
    <type>Lookup</type>
</CustomField>