force-app/main/default/objects/Lead/fields/Score_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Score_Reasons__c</fullName>
    <label>Score Reasons</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>